--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -97,7 +97,8 @@
         </div>
 
         <div class="row class-container white"  id="topics" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800"> 
-            <h3 style="padding-left:10%">How to submit </h3>
+            <h3>How to submit </h3>
+            <div class="white">
                 <p> All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Formatting instructions are available for both LaTeX and Word users. LaTeX users must use the
                     provided <code>acmart.cls</code> and <code>ACM-Reference-Format.bst</code> without modification, enable the conference format in the preamble of the document
                     (i.e., <code>\documentclass[sigconf,review]{acmart}</code>), and use the ACM reference format for the bibliography (i.e.,
@@ -124,6 +125,7 @@
                         ACM Publications Policy on Research Involving Human Participants and Subjects</a>.</p>
                 <p> Please note that for each accepted paper, at least one author must register at SECUTE 2024 and present it. This is mandatory to get the paper published in the proceedings.</p>
                 <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=secute2024" target="_blank"> https://easychair.org/conferences/?conf=secute2024 </a></h4>
+            </div>
         </div>
 
         <div class="row class-container" style="margin-top:2%" data-aos="fade-left" data-aos-delay="600" data-aos-duration="500">
