--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="row class-container white"  id="topics" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800"> 
-            <h3>How to submit </h3>
+            <h3 style="padding-left:10%">How to submit </h3>
             <div class="white">
                 <p> All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Formatting instructions are available for both LaTeX and Word users. LaTeX users must use the
                     provided <code>acmart.cls</code> and <code>ACM-Reference-Format.bst</code> without modification, enable the conference format in the preamble of the document
