--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -128,7 +128,7 @@
             </div>
         </div>
 -->
-        <div class="row class-container" style="margin-top:2%" data-aos="fade-left" data-aos-delay="600" data-aos-duration="500">
+        <div class="row class-container" data-aos="fade-left" data-aos-delay="600" data-aos-duration="500">
             <h3 style="padding-left:10%"> Evaluation Criteria </h3>
             <div class="white">
                 <p> All papers will be subjected to a thorough <b style="color: rgb(48, 86, 175)">peer review</b>, focusing on originality, quality, soundness, and relevance,
