--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -129,6 +129,37 @@
         </div>
 -->
         <div class="row class-container" data-aos="fade-left" data-aos-delay="600" data-aos-duration="500">
+        <h3 style="padding-left:10%">How to submit </h3>
+            <div class="white">
+                <p> All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Formatting instructions are available for both LaTeX and Word users. LaTeX users must use the
+                    provided <code>acmart.cls</code> and <code>ACM-Reference-Format.bst</code> without modification, enable the conference format in the preamble of the document
+                    (i.e., <code>\documentclass[sigconf,review]{acmart}</code>), and use the ACM reference format for the bibliography (i.e.,
+                    <code>\bibliographystyle{ACM-Reference-Format}</code>).</p>
+                <p> The authors have two options for submitting their papers:
+                    <ul>
+                    <li><strong> Full research papers (max 10 pages) </strong> that describe empirical research (i.e., quantitative, qualitative, and mixed research) on security testing in complex systems and
+                        architectures. Negative results papers are welcome if they can support advices or lessons learned. Papers reporting replications of empirical studies are welcome as well.</li>
+
+                    <li><strong> Ongoing research papers (max 5 pages) </strong> that describe ongoing research on topics related to the workshop. The purpose of these papers is to communicate new ideas in the context
+                        of security testing in complex systems for which the authors want to obtain early feedback from the workshop community, especially on the evaluation and assessment strategies.
+                        An ongoing research paper must describe the idea and the proposed evaluation and assessment strategy, possibly (but not necessarily) with some preliminary results. </li>
+                    </ul>
+                </p>
+                <p> Authors must comply with the <a href="https://github.com/acmsigsoft/open-science-policies/blob/master/sigsoft-open-science-policies.md">SIGSOFT Open Science Policy</a>,
+                     (i.e., to archive data and artifacts in a permanent repository—e.g., Zenodo, not GitHub—to 
+                    the extent ethically and practically possible, and include links in a Data Availability section in their manuscripts). </p>
+                <p> SECUTE 2024 employs a double-anonymous review process. Do not include author names or affiliations in submissions. All references 
+                    to the author’s prior work should be in the third person. Any online supplements, replication packages, etc., referred to in the work should also 
+                    be anonymized. Advice for sharing supplements anonymously can be found <a href="https://www.acm.org/publications/policies/plagiarism-overview">here</a>. </p>
+                <p>By submitting to SECUTE 2024, authors agree to the <a href="https://www.acm.org/publications/policies/plagiarism-overview">ACM Policy and Procedures on Plagiarism, Misrepresentation, 
+                    and Falsification.</a> Papers submitted must not be published or under review elsewhere. The Program Chairs may use plagiarism detection software under contract to the ACM. If the research
+                    involves human participants/subjects, the authors must adhere to the <a href="https://www.acm.org/publications/policies/research-involving-human-participants-and-subjects">
+                        ACM Publications Policy on Research Involving Human Participants and Subjects</a>.</p>
+                <p> Please note that for each accepted paper, at least one author must register at SECUTE 2024 and present it. This is mandatory to get the paper published in the proceedings.</p>
+                <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=secute2024" target="_blank"> https://easychair.org/conferences/?conf=secute2024 </a></h4>
+            </div>
+            
+            <!--
             <h3 style="padding-left:10%"> Evaluation Criteria </h3>
             <div class="white">
                 <p> All papers will be subjected to a thorough <b style="color: rgb(48, 86, 175)">peer review</b>, focusing on originality, quality, soundness, and relevance,
@@ -153,6 +184,7 @@
                 <p> You can find more details here: <a href="https://emsejournal.github.io/special_issues/2024_SI_SECUTE.html" target="_blank"> https://emsejournal.github.io/special_issues/2024_SI_SECUTE.html </a></p>
 
             </div>
+            -->
         </div>
         
 
