--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -131,7 +131,7 @@
         
 
         <div class="row aclass-container">
-            <div class="white" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
+            <div class="grey" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
                 <h3>Important dates</h3>
                 <ul>
                     <li><strong>Paper submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
