--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -129,7 +129,7 @@
             </div>
         </div>
         
-
+        <!--------- IMPORTANT DATES --------->
         <div class="row aclass-container">
             <div class="grey" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
                 <h3>Important dates</h3>
