--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -100,10 +100,12 @@
         <div class="row class-container" data-aos="fade-left" data-aos-delay="600" data-aos-duration="500">
         <h3 style="padding-left:10%">How to submit </h3>
             <div class="white">
+<p>Submitted papers must have been neither previously accepted for publication nor concurrently submitted for review in another journal, book, conference, or workshop. All submissions must come in PDF format and conform, at the time of submission, to the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Conference Proceedings Formatting Guidelines</a>: title in 24pt font and full text in 10pt font, LaTEX users must use <code>\textit{$\backslash$documentclass[10pt,conference]{IEEEtran}}</code> without including the <code>\textit{compsoc}</code> or <code>\textit{compsocconf}</code> option. Also, papers must comply with the IEEE Policy on Authorship. All submissions must be in English. Submissions can be of the following types:</p>
+                <!--
                 <p> All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Formatting instructions are available for both LaTeX and Word users. LaTeX users must use the
                     provided <code>acmart.cls</code> and <code>ACM-Reference-Format.bst</code> without modification, enable the conference format in the preamble of the document
                     (i.e., <code>\documentclass[sigconf,review]{acmart}</code>), and use the ACM reference format for the bibliography (i.e.,
-                    <code>\bibliographystyle{ACM-Reference-Format}</code>).</p>
+                    <code>\bibliographystyle{ACM-Reference-Format}</code>).</p> -->
                 <p> The authors have two options for submitting their papers:
                     <ul>
                     <li><strong> Full research papers (max 10 pages) </strong> that describe empirical research (i.e., quantitative, qualitative, and mixed research) on security testing in complex systems and
