--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -100,7 +100,7 @@
         <div class="row class-container" data-aos="fade-left" data-aos-delay="600" data-aos-duration="500">
         <h3 style="padding-left:10%">How to submit </h3>
             <div class="white">
-<p>Submitted papers must have been neither previously accepted for publication nor concurrently submitted for review in another journal, book, conference, or workshop. All submissions must come in PDF format and conform, at the time of submission, to the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Conference Proceedings Formatting Guidelines</a>: title in 24pt font and full text in 10pt font, LaTEX users must use <code>\textit{$\backslash$documentclass[10pt,conference]{IEEEtran}}</code> without including the <code>\textit{compsoc}</code> or <code>\textit{compsocconf}</code> option. Also, papers must comply with the IEEE Policy on Authorship. All submissions must be in English. Submissions can be of the following types:</p>
+<p>Submitted papers must have been neither previously accepted for publication nor concurrently submitted for review in another journal, book, conference, or workshop. All submissions must come in PDF format and conform, at the time of submission, to the <a href="https://www.ieee.org/conferences/publishing/templates.html">IEEE Conference Proceedings Formatting Guidelines</a>: title in 24pt font and full text in 10pt font, LaTEX users must use <code>\textit{$\backslash$documentclass[10pt,conference]{IEEEtran}}</code> <b>without including</b> the <code>\textit{compsoc}</code> or <code>\textit{compsocconf}</code> option. Also, papers must comply with the <a href="https://www.ieee.org/publications/rights/author-rights-responsibilities.html">IEEE Policy on Authorship</a>. All submissions must be in English. Submissions can be of the following types:</p>
                 <!--
                 <p> All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Formatting instructions are available for both LaTeX and Word users. LaTeX users must use the
                     provided <code>acmart.cls</code> and <code>ACM-Reference-Format.bst</code> without modification, enable the conference format in the preamble of the document
@@ -108,12 +108,9 @@
                     <code>\bibliographystyle{ACM-Reference-Format}</code>).</p> -->
                 <p> The authors have two options for submitting their papers:
                     <ul>
-                    <li><strong> Full research papers (max 10 pages) </strong> that describe empirical research (i.e., quantitative, qualitative, and mixed research) on security testing in complex systems and
-                        architectures. Negative results papers are welcome if they can support advices or lessons learned. Papers reporting replications of empirical studies are welcome as well.</li>
+                    <li><strong> Full research papers </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. These will be given a 15-minute presentation during the workshop.</li>
 
-                    <li><strong> Ongoing research papers (max 5 pages) </strong> that describe ongoing research on topics related to the workshop. The purpose of these papers is to communicate new ideas in the context
-                        of security testing in complex systems for which the authors want to obtain early feedback from the workshop community, especially on the evaluation and assessment strategies.
-                        An ongoing research paper must describe the idea and the proposed evaluation and assessment strategy, possibly (but not necessarily) with some preliminary results. </li>
+                    <li><strong> Ongoing research papers  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation during the workshop. </li>
                     </ul>
                 </p>
                 <p> Authors must comply with the <a href="https://github.com/acmsigsoft/open-science-policies/blob/master/sigsoft-open-science-policies.md">SIGSOFT Open Science Policy</a>,
