--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -108,21 +108,13 @@
                     <code>\bibliographystyle{ACM-Reference-Format}</code>).</p> -->
                 <p> The authors have two options for submitting their papers:
                     <ul>
-                    <li><strong> Full research papers </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. These will be given a 15-minute presentation during the workshop.</li>
+                    <li><strong> Regular papers: </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. These will be given a 15-minute presentation during the workshop.</li>
 
-                    <li><strong> Ongoing research papers  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation during the workshop. </li>
+                    <li><strong> Short papers:  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation during the workshop. </li>
                     </ul>
                 </p>
-                <p> Authors must comply with the <a href="https://github.com/acmsigsoft/open-science-policies/blob/master/sigsoft-open-science-policies.md">SIGSOFT Open Science Policy</a>,
-                     (i.e., to archive data and artifacts in a permanent repository—e.g., Zenodo, not GitHub—to 
-                    the extent ethically and practically possible, and include links in a Data Availability section in their manuscripts). </p>
-                <p> SECUTE 2024 employs a double-anonymous review process. Do not include author names or affiliations in submissions. All references 
-                    to the author’s prior work should be in the third person. Any online supplements, replication packages, etc., referred to in the work should also 
-                    be anonymized. Advice for sharing supplements anonymously can be found <a href="https://www.acm.org/publications/policies/plagiarism-overview">here</a>. </p>
-                <p>By submitting to SECUTE 2024, authors agree to the <a href="https://www.acm.org/publications/policies/plagiarism-overview">ACM Policy and Procedures on Plagiarism, Misrepresentation, 
-                    and Falsification.</a> Papers submitted must not be published or under review elsewhere. The Program Chairs may use plagiarism detection software under contract to the ACM. If the research
-                    involves human participants/subjects, the authors must adhere to the <a href="https://www.acm.org/publications/policies/research-involving-human-participants-and-subjects">
-                        ACM Publications Policy on Research Involving Human Participants and Subjects</a>.</p>
+                <p> The workshop will follow a double-anonymous peer review process in alignment with SANER’s Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person. The only exception will be dataset and tools papers, which will employ an optional single-anonymous review process.</p>
+                <p>All submitted papers will be reviewed regarding technical quality, relevance, significance, and clarity by the program committee. All workshop papers should be submitted electronically in PDF format through the workshop website (IEEE Format, Double Columns). Accepted papers will become part of the workshop proceedings.</p>
                 <p> Please note that for each accepted paper, at least one author must register at SECUTE 2024 and present it. This is mandatory to get the paper published in the proceedings.</p>
                 <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=secute2024" target="_blank"> https://easychair.org/conferences/?conf=secute2024 </a></h4>
             </div>
