--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -113,9 +113,9 @@
                     <li><strong> Short papers:  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation during the workshop. </li>
                     </ul>
                 </p>
-                <p> The workshop will follow a double-anonymous peer review process in alignment with SANER’s Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person. The only exception will be dataset and tools papers, which will employ an optional single-anonymous review process.</p>
-                <p>All submitted papers will be reviewed regarding technical quality, relevance, significance, and clarity by the program committee. All workshop papers should be submitted electronically in PDF format through the workshop website (IEEE Format, Double Columns). Accepted papers will become part of the workshop proceedings.</p>
-                <p> Please note that for each accepted paper, at least one author must register at SECUTE 2024 and present it. This is mandatory to get the paper published in the proceedings.</p>
+                <p> The workshop will follow a <mark>double-anonymous</mark> peer review process in alignment with SANER's Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person. The only exception will be dataset and tools papers, which will employ an optional single-anonymous review process.</p>
+                <p> All submitted papers will be reviewed regarding technical quality, relevance, significance, and clarity by the program committee. All workshop papers should be submitted electronically in PDF format through the workshop website (IEEE Format, Double Columns). Accepted papers will become part of the workshop proceedings.</p>
+                <p> Please note that for each accepted paper, at least one author must register at MSR4P&S 2025 and present it. This is mandatory to get the paper published in the proceedings.</p>
                 <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=secute2024" target="_blank"> https://easychair.org/conferences/?conf=secute2024 </a></h4>
             </div>
             </br>
