--- a/committee.html
+++ b/committee.html
@@ -38,7 +38,7 @@
     <link href="assets/css/footer_style.css" rel="stylesheet">
     <link href="assets/css/committee_style.css" rel="stylesheet">
 
-    <link rel="icon" href="assets/img/secute-logo.png">
+    <link rel="icon" href="assets/img/msr4ps/msrpslogo.png">
 </head>
 <body>
 
@@ -46,8 +46,8 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
-            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
-            <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
+            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img//msr4ps/msrpslogo.png" alt="" class="img-fluid"></a>
+            <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -192,7 +192,7 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         <div class="credits">
-            SECUTE 2024
+            MSR4P&S 2025
         </div>
     </div>
 </footer>
