--- a/committee.html
+++ b/committee.html
@@ -54,8 +54,10 @@
             <ul>
                 <li><a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a></li>
                 <li><a class="nav-link" href="call_for_papers.html"><i class="bi bi-bell"></i>Call for papers</a></li>
+                <!--
                 <li><a class="nav-link" href="accepted_papers.html"><i class="bi bi-journals"></i>Accepted Papers</a></li>
                 <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
+                -->
                 <li><a class="nav-link active" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
@@ -85,7 +87,7 @@
                             <img src="assets/img/emanuele.png" class="img-fluid" alt="">
                         </div>
                         <div class="member-info">
-                            <h5><a href="https://emaiannone.github.io/" target="_blank">Emanuele Iannone</a></h5>
+                            <h5><a href="https://www.ndiaz-ferreyra.com" target="_blank">Nicolás E. Díaz Ferreyra</a></h5>
                             <span>Hamburg University of Technology</span>
                             <span>Hamburg, Germany</span>
                         </div>
@@ -98,39 +100,12 @@
                                 <img src="assets/img/valeria.png" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
-                                <h5><a href="https://valeriapontillo.github.io/" target="_blank">Valeria Pontillo</a></h5>
-                                <span>Vrije Universiteit Brussel</span>
-                                <span>Bruxelles, Belgium</span>
+                                <h5><a href="https://valeriapontillo.github.io/" target="_blank">Zadia Codaboux</a></h5>
+                                <span>University of Saskatchewan</span>
+                                <span>Saskatchewan, Canada</span>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="300"  data-aos-duration="800">
-                        <div class="member">
-                        <div class="member-img">
-                            <img src="assets/img/coen.png" class="img-fluid" alt="">
-                        </div>
-                        <div class="member-info">
-                            <h5><a href="https://soft.vub.ac.be/~cderoove/" target="_blank">Coen De Roover</a></h5>
-                            <span>Vrije Universiteit Brussel</span>
-                            <span>Bruxelles, Belgium</span>
-                        </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="400"  data-aos-duration="800">
-                        <div class="member">
-                            <div class="member-img">
-                                <img src="assets/img/riccardo.png" class="img-fluid" alt="">
-                            </div>
-                            <div class="member-info">
-                                <h5><a href="https://scandariato.org/" target="_blank">Riccardo Scandariato</a></h5>
-                                <span>Hamburg University of Technology</span>
-                                <span>Hamburg, Germany</span>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
                 
             </div>
