--- a/committee.html
+++ b/committee.html
@@ -84,7 +84,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="100"  data-aos-duration="800">
                         <div class="member">
                         <div class="member-img">
-                            <img src="assets/img/emanuele.png" class="img-fluid" alt="">
+                            <img src="assets/img/msr4ps/nicolas.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="member-info">
                             <h5><a href="https://www.ndiaz-ferreyra.com" target="_blank">Nicolás E. Díaz Ferreyra</a></h5>
@@ -97,10 +97,10 @@
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="200"  data-aos-duration="800">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/valeria.png" class="img-fluid" alt="">
+                                <img src="assets/img/msr4ps/zadia.png" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
-                                <h5><a href="https://valeriapontillo.github.io/" target="_blank">Zadia Codaboux</a></h5>
+                                <h5><a href="https://www.cs.usask.ca/faculty/zadiacodabux/" target="_blank">Zadia Codabux</a></h5>
                                 <span>University of Saskatchewan</span>
                                 <span>Saskatchewan, Canada</span>
                             </div>
