--- a/committee.html
+++ b/committee.html
@@ -81,7 +81,7 @@
                 <h4> Organizing Chairs</h4>
                 <div class="row member-container">
 
-                    <div class="d-flex justify-content-center" data-aos="fade-right" data-aos-delay="100"  data-aos-duration="800">
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="100"  data-aos-duration="800">
                         <div class="member">
                         <div class="member-img">
                             <img src="assets/img/msr4ps/nicolas.jpg" class="img-fluid" alt="">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-center" data-aos="fade-right" data-aos-delay="200"  data-aos-duration="800">
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="200"  data-aos-duration="800">
                         <div class="member">
                             <div class="member-img">
                                 <img src="assets/img/msr4ps/zadia.png" class="img-fluid" alt="">
