--- a/committee.html
+++ b/committee.html
@@ -79,7 +79,7 @@
             <h3> Workshop Chairs</h3>
             <div class="type-chairs">
                 <h4> Organizing Chairs</h4>
-                <div class="row member-container">
+                <div class="row member-container" style="justify-content: center">
 
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="100"  data-aos-duration="800">
                         <div class="member">
