--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -153,7 +153,7 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         <div class="credits">
-            SECUTE 2024
+            MSR4P&S 2025
         </div>
     </div>
 </footer>
