--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
             <div class="credits">
-                SECUTE 2024
+                MSR4P&S 2025
             </div>
         </div>
     </footer>
