--- a/committee.html
+++ b/committee.html
@@ -118,9 +118,9 @@
                                 <img src="assets/img/viviana.png" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
-                                <h5><a href="https://vipenti.github.io/" target="_blank">Viviana Pentangelo</a></h5>
-                                <span>University of Salerno</span>
-                                <span>Salerno, Italy</span>
+                                <h5>T.B.A</h5>
+                                <span>T.B.A</span>
+                                <span>T.B.A</span>
                             </div>
                         </div>
                     </div>
