--- a/committee.html
+++ b/committee.html
@@ -129,22 +129,18 @@
         </div>
         
         <div class="row class-container white" id="program_committee" style="margin-top:3%">
-            <h3> Program Committee </h3>
+            <h3> Program Committee (T.B.A) </h3>
             <div style="margin: 1%;">
                 <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
-                    <li> <strong> Dario Di Dario</strong>, University of Salerno, Italy </li>
-                    <li> <strong> Ruben Opdebeeck</strong>, Vrije Universiteit Brussel, Belgium </li>
-                    <li> <strong> Quang Cuong Bui</strong>, Hamburg University of Technology, Germany </li>
-                    <li> <strong> Antonino Sabetta</strong>, SAP Security Research, France </li>
-                    <li> <strong> Péter Hegedűs</strong>, University of Szeged, Hungary </li>
-                    <li> <strong> Ranindya Paramitha</strong>, University of Trento, Italy </li>
-                    <li> <strong> Ahmed Zerouali</strong>, Vrije Universiteit Brussel, Belgium </li>
-                    <li> <strong> Mariano Ceccato</strong>, University of Verona, Italy </li>
-                    <li> <strong> Michael Felderer</strong>, German Aerospace Center, Cologne </li>
-                    <li> <strong> Maura Pintor</strong>, University of Cagliari, Italy </li>
-                    <li> <strong> Jordan Samhi</strong>, CISPA, Germany </li>
-                    <li> <strong> Martin Johns</strong>, Technical University of Braunschweig, Germany </li>
-                    <li> <strong> Quentin Stievenart</strong>, Université du Québec, Canada </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
+                    <li> <strong> ... </li>
                 </ul>
             </div>
         </div>
