--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
+                    <li><a class="dropdown">Past Editions</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
