--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                     <li><a class="dropdown">Past Editions</a>
-                        <li class="dropdown"><a href="">https://msr4ps.netlify.app/msr4ps2022/</a></li>
-                        <li class="dropdown"><a href="">https://msr4ps.netlify.app/msr4ps2024/</a></li>
+                        <li class="nav-link"><a href="">https://msr4ps.netlify.app/msr4ps2022/</a></li>
+                        <li class="nav-link"><a href="">https://msr4ps.netlify.app/msr4ps2024/</a></li>
                     </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
