--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
                     <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
-                    <li><a class="dropdown">Past Editions</a>
-                        <li class="nav-link"><a href="">https://msr4ps.netlify.app/msr4ps2022/</a></li>
-                        <li class="nav-link"><a href="">https://msr4ps.netlify.app/msr4ps2024/</a></li>
-                    </li>
+                    <ul><a class="dropdown">Past Editions</a>
+                        <li><a class="nav-link" href="accepted_papers.html"><i class="bi bi-journals"></i>Accepted Papers</a></li>
+                        <li class="nav-link"><a href="https://msr4ps.netlify.app/msr4ps2022/">2022</a></li>
+                        <li class="nav-link"><a href="https://msr4ps.netlify.app/msr4ps2022/">2024</a></li>
+                    </ul>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
