--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                     <ul><a class="dropdown">Past Editions</a>
-                        <li><a class="nav-link" href="accepted_papers.html"><i class="bi bi-journals"></i>Accepted Papers</a></li>
-                        <li class="nav-link"><a href="https://msr4ps.netlify.app/msr4ps2022/">2022</a></li>
-                        <li class="nav-link"><a href="https://msr4ps.netlify.app/msr4ps2022/">2024</a></li>
+                        <li><a class="nav-link" href="https://msr4ps.netlify.app/msr4ps2022/">2022</li>
+                        <li><a class="nav-link" href="https://msr4ps.netlify.app/msr4ps2024/">2024</li>
                     </ul>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
